ajustes de layout

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="nav-bar">
 
             <div class="nav-logo">
-                <a href="#"><img src="#" alt="foto ref"></a>
+                <a href="#"><img src="/img/logo.png" alt="foto ref" width="60px"></a>
             </div>
 
             <div class="nav-list">
@@ -32,9 +32,34 @@
 
     <main>
 
-        <section>
+        <section class="secao1">
+
+            <div class="div-container">
+
+                <div class="div-texto">
+                    <h1 class="titulo">APP Viver Bem: Controle e Segurança na Gestão de Medicamentos</h1>
+
+                    <p class="paragrafo">O APP Viver bem é a solução ideal para otimizar a gestão de medicamentos na sua clínica médica. Com ele, você terá controle total sobre o estoque, validade, dispensação e administração de medicamentos, garantindo a segurança dos pacientes e a eficiência da sua equipe.</p>
+
+                    <div class="div-botao">
+                        <button><a href="pages/login.html">ENTRAR</a></button>
+                    </div>
+
+                </div>
+
+                <div class="div-foto">
+                    <img src="img/wallpaper-idoso.png" alt="" width="500px">
+                </div>
+
+            </div>
 
         </section>
+
+
+
+        <footer>
+            <p>PROJETO DESENVOLVIDO POR BRUNO NASCIMENTO</p>
+        </footer>
 
     </main>
     
