Mudanças no layout

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
 
             <div class="login-button">
-                <button><a href="#">ENTRAR</a></button>
+                <button><a href="pages/login.html">ENTRAR</a></button>
             </div>
 
         </nav>
@@ -48,7 +48,11 @@
                 </div>
 
                 <div class="div-foto">
-                    <img src="img/wallpaper-idoso.png" alt="" width="500px">
+                    
+                </div>
+
+                <div class="div-foto">
+                    
                 </div>
 
             </div>
